@@ -11,15 +11,13 @@ DIST deblob-check-2.6.35 269127 RMD160 2143e3f0fc362d90b00f5f05cdd6dac811f352d0 
 DIST linux-2.6.32.tar.bz2 64424138 RMD160 b93742cbaf8174f2200d2dbef0d47a26c618039c SHA1 410b4fc818023bfef60064e973ff0ab46d3bfb19 SHA256 5099786d80b8407d98a619df00209c2353517f22d804fdd9533b362adcb4504e
 DIST linux-2.6.34.tar.bz2 67633622 RMD160 dafd721b00c13e3652405b517b379eed10020bf4 SHA1 4188857ba71f301991dc56285f593e9c311e5824 SHA256 fa395fec7de633df1cb85b6248b8f35af98380ed128a8bc465fb48bc4d252633
 DIST linux-2.6.35.tar.bz2 69305709 RMD160 f5d91abb4fa72fac812578d830b22180d85a0e6f SHA1 4cb1fbfbeedcd658ca37739679c65dfaa136bf4e SHA256 18b2e2c336032e366c942622b77302cb05fc034fb19018f086a4ebc9ed41bfcf
-DIST patch-2.6.32.22.bz2 602391 RMD160 1f3b8cbac32a5833d98e89e0f2e7a4cd24fe4996 SHA1 bc2239222fc61e45404bb9db41e9e6e51594a6a1 SHA256 9f04a819a6ae1ac9a4793ce229bc9a2cb095ac10a2d46955ec1e6769283c4de4
-DIST patch-2.6.32.23.bz2 625510 RMD160 69ec5d895a146576f06d3368ad0cc89499b00e0f SHA1 56c282a3dd899ffcc0752abc872ebe25922b24fe SHA256 c252375c7c2d2557cb8d4b708bc7e3ca4d23b81afbf3278b87f8721c8ca5f8c9
+DIST patch-2.6.32.24.bz2 625226 RMD160 0c93627648f2ac1a7e5dee0c3ce7b7c1d9de4987 SHA1 c82ec2f079356173992956d4201ee198d3a86471 SHA256 b84e59395e168c2300f6d858d1a7cb998bf6a04355ad8587fe7146c6ab457ce8
 DIST patch-2.6.34.7.bz2 184957 RMD160 0f72e9496ff0082df05424ec75aff166ba6dff27 SHA1 b346d804a428239145b6c058ff0df88792c31094 SHA256 b146904ea07cc87a3fbcbd4eab51d331d56718431539e6aa29c24b072e6b7832
 DIST patch-2.6.35.5.bz2 115391 RMD160 8a6d0b71aa043531575203aa61ac6807532f35e8 SHA1 1267c980179fe4ab35ac7344523c4dd616d2d5a6 SHA256 94bbeb43c6bd8047fa5f42766a68879199dfdadee11bd3e8f10f1317f698b0f4
 DIST patch-2.6.35.6.bz2 141668 RMD160 e78612076af139429d92aa819da3586be62a3130 SHA1 2e0404856ec2ec311fc5c4dedcb09f9adc8b2faa SHA256 8f4c635265d1e7049bc94e22d3c3989dae15ea5cb4ae99bb11cd4a39757eafeb
-EBUILD calculate-sources-2.6.32.22-r1.ebuild 746 RMD160 e7683435e0f449453c016be2e3888ebb81372cb1 SHA1 19a3aa25464ed50bdeaeed66bd924a1e745746c8 SHA256 96f403498be3196cff45c515b37db834095bd1166916e2889a75d9e492c9cdf3
-EBUILD calculate-sources-2.6.32.23.ebuild 748 RMD160 b896fde446060469ef43da0ca52a7654df6b9536 SHA1 906107a1c742698f796e030415ab07988dc3209b SHA256 a7dbbc43e6ca706102c2a66495f4593ee64d69823264a2dca6c19d87291a116c
+EBUILD calculate-sources-2.6.32.24.ebuild 746 RMD160 e7683435e0f449453c016be2e3888ebb81372cb1 SHA1 19a3aa25464ed50bdeaeed66bd924a1e745746c8 SHA256 96f403498be3196cff45c515b37db834095bd1166916e2889a75d9e492c9cdf3
 EBUILD calculate-sources-2.6.34.7.ebuild 730 RMD160 03829000741607b551f63823a12df566bae495d6 SHA1 65c76f8c936acda61f12991e3756db6a4f3f4142 SHA256 0e0593a099c5d3d5f087e1fd5f55eb94a7d49ee6d1e4c55e5b5e23f19b0ddd71
 EBUILD calculate-sources-2.6.35.5.ebuild 730 RMD160 03829000741607b551f63823a12df566bae495d6 SHA1 65c76f8c936acda61f12991e3756db6a4f3f4142 SHA256 0e0593a099c5d3d5f087e1fd5f55eb94a7d49ee6d1e4c55e5b5e23f19b0ddd71
 EBUILD calculate-sources-2.6.35.6.ebuild 732 RMD160 4eb92daf4c535ce529c8930847f4503bd4431617 SHA1 5aeeff74e73d173257844c4a3ebfea11fc87f69d SHA256 b584166d290c6738947dee840e678ea00821d33892402643dffa8a7f88610880
-MISC ChangeLog 3721 RMD160 3c2c79d89749d1e4be0a73b68e4d5c79af40cfe8 SHA1 5c912a07b24b3bcf6307e883743a37f8d954ae61 SHA256 bf93b850695662e4c907a0476c48030fcc1916498b29e9d2b16a0e2187e53201
+MISC ChangeLog 3972 RMD160 76ac605101de9635d1e42b0b6d99bdbfbe887ec3 SHA1 c8f2d18ba47bc7e467d882ceb6bfab91368fd654 SHA256 1b1eb7236b1a26983a7ac6dfd356fdc9f641489d35ce79d8bd6173d2baa98b70
 MISC metadata.xml 364 RMD160 308abbf758102b5591c353f41a62be6836f98693 SHA1 5029bd7cf897e4eb8f8e8fa935c02d4c73eb59db SHA256 0bee25282d797e432206373a8535689412a3f76f8974315f8ecf73536bf0e505
