@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-sources-2.6.32.24 (10 Oct 2010)
+
+  10 Oct 2010; Трацевский Александр <alex@gentoo.org>
+  -calculate-sources-2.6.32.22-r1.ebuild,
+  -calculate-sources-2.6.32.23.ebuild, +calculate-sources-2.6.32.24.ebuild:
+  bump version
+
 *calculate-sources-2.6.35.6 (28 Sep 2010)
 *calculate-sources-2.6.32.23 (28 Sep 2010)
 
